load-balancer-test/svc-ci-pod-web-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-ci-pod-web-php
spec:
  type: ClusterIP
  selector:
    app: deployment-pod-web-php
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80
