load-balancer-test/svc-lb-pod-web-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-lb-pod-web-php
spec:
  type: LoadBalancer
  selector:
    app: deployment-pod-web-php
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
