load-balancer-test/svc-np-pod-web-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport-pod-web-php
spec:
  type: NodePort
  selector:
    app: deployment-pod-web-php
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
